# wasmtime-mariadb

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release-assets.yml
docs/: durability-validation-2026-07-10.md  host-plumbing-options-2026-07-12.md  mtr-extern-smoke-2026-07-09.md  transaction-validation-2026-07-10.md  wasi-preview2-boundary-2026-07-12.md  wordpress-local-dev-compat-2026-07-10.md
fixtures/: dev-command.wat
patches/mariadb-wasi/: 0001-skip-gtid-loader-with-skip-slave-start.patch
patches/mariadb-wasi/files/include/: mariadb_wasi_file_shim.h  mariadb_wasi_libc_shim.h  mariadb_wasi_socket_shim.h  pwd.h
scripts/: bench-tcp.py  build-openssl-wasi.sh  build-single.sh  fetch-mariadb-source.sh  install-release.ps1  install-release.sh  mariadb-system-tables.sql  mtr-extern-init.sql  package-release.ps1  package-release.sh  probe-mariadb-wasi-port.sh  run-60k-transaction-workload.sh  run-mtr-extern-smoke.sh  run-mtr-transaction-nuances.sh  run-mtr-wordpress-broad.sh  run-mtr-wordpress-compat.sh  run-server.ps1  run-server.sh  stop-server.ps1  stop-server.sh  tcp-port-proxy.py  tcp-unix-proxy.py  test-durability-recovery.sh  test-mysql-client.sh  test-supervisor-lifecycle.py  test-wordpress-local-dev.sh  test-wordpress-woocommerce-local-dev.sh  verify-dev-fixture.sh
src/: guest_abi.rs  host_files.rs  host_sockets.rs  host_sockets_windows.rs  main.rs
tests/: WasmtimeMariaDBWordPressWooCommerceTest.php  mtr-transaction-verified.txt  wordpress-mtr-verified.txt  wordpress-woocommerce-bootstrap.php
(+1 files in other folders)
